--- a/css/styles.css
+++ b/css/styles.css
@@ -355,3 +355,24 @@ img{
     cursor: pointer;
     margin-right: auto;
 }
+
+/* ===FOOTER=== */
+.footer{
+    background-color: var(--second-color);
+    color: var(--third-color);
+    text-align: center;
+    font-weight: var(--font-semi);
+    padding: 2rem 0;
+}
+.footer_title{
+    font-size: 1.5rem;
+    margin-bottom: var(--mb-2);
+}
+.footer_social{
+    margin-bottom: var(--mb-3);
+}
+.footer_icon{
+    font-size: 1.5rem;
+    color: var(--third-color);
+    margin: 0 var(--mb-2)
+}
